--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -11,11 +11,11 @@
          <form action="/user/login" method="post">
              <div class="form-group">
                  <label for="email">E-Mail</label>
-                <input type="text" id="email" name="email" class="form-control">
+                <input type="email" id="email" name="email" class="form-control">
             </div>
             <div class="form-group">
                  <label for="password">Password</label>
-                <input type="text" id="password" name="password" class="form-control">
+                <input type="password" id="password" name="password" class="form-control">
             </div>
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             <button type="submit" class="btn btn-primary">Login</button>
